# wp4-architecture

./: .gitignore  CLAUDE.md  README.md  requirements.txt
.github/: CODEOWNERS
adr/: 001-EBWOID-identifiers.md  001-replace-lpid-with-ebwoid.md  002-identity-matching-and-subject-linking.md  Acceptance-of-Self-Issued-Attributes.md  Atomic-Granularity-for-Mandate-Related-Attestations.md  EAA-Chaining.md  EAA-extension-for-the-EDD.md  EBW EAA exchange automation.md  EUBW-attestation-format.md  Minimum-Viable-Taxonomy-for-PoA-PoR.md  README.md  Role-Based-vs-Service-Based-Authorization.md  Support-for-Sole-Trader-Representation.md  a  adr-qeaa-attestations-qerds-documents.md  ar-pseudonyms.md  attestation-revocation-mechanism.md  base-protocols.md  basic-lpid.md  build-document-vs-attestation-analysis.md  build-document-vs-attestation.md  build-edd-identification-discovery-connection-analysis.md  build-edd-identification-discovery-connection.md  build-qerds.md  bwua-ts3-attestation.md  document-formats.md  ebw-endpoint-lookup-service.md  ebw-scope.md  mutual_identification  openid-federation-trust-marks.md  qerds-issuance-and-presentation.md  qerds-registry-relay.md  revocation-mechanism.md  trusted-lists.md  wallet-unit-lifecycle-management.md
blueprint/: .gitignore  09-roadmap.md  (+26 more)
deployment/files/wrpac-acme/: pyproject.toml
deployment/files/wrpac-acme/wrpac_acme/: __init__.py  client.py  crypto.py  dogtag.py  facade.py  negative_tests.py  rp_list.py  storage.py
deployment/files/wrpac-acme/wrpac_acme.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+50 files in other folders)
